2013-02-10  Dmitry Antipov  <dmantipov@yandex.ru>

	* syntax.c (scan_sexps_forward): Fix byte position calculation
	Bug#13664 (a.k.a Bug#13667) introduced with 2013-02-08 change.

2013-02-10  Paul Eggert  <eggert@cs.ucla.edu>

	* fileio.c (Fexpand_file_name): Omit confusing pointer comparison
	that was not needed.

2013-02-09  Paul Eggert  <eggert@cs.ucla.edu>

	Minor hashing refactoring.
	* fns.c (SXHASH_REDUCE): Move to lisp.h.
	(sxhash_float): Return EMACS_UINT, for consistency with the other
	hash functions.
	* lisp.h (INTMASK): Now a macro, since SXHASH_REDUCE is now a
	non-static inline function and therefore can't use static vars.
	(SXHASH_REDUCE): Move here from fns.c, and make it inline.
	* profiler.c (hashfn_profiler): Use SXHASH_REDUCE, to be consistent
	with the other hash functions.

2013-02-09  Eli Zaretskii  <eliz@gnu.org>

	* callproc.c (Fcall_process_region) [WINDOWSNT]: Make sure the
	XXXXXX part of the temporary file pattern is not downcased even
	when w32-downcase-file-names is non-nil.  (Bug#13661)

	* xdisp.c (decode_mode_spec): Remove handling of %t.

	* msdos.c (careadlinkatcwd): Remove.

2013-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (skip_dyn_bytes): New function (bug#12598).
	(read1): Use it.  Use getc instead of READCHAR to read bytes.
	(load_each_byte): Remove.  Update users.

2013-02-08  Dmitry Antipov  <dmantipov@yandex.ru>

	* search.c (scan_buffer): Calculate end byte position just once.
	(scan_newline): Do not recalculate start_byte.
	(search_command): Use eassert.
	* syntax.c (struct lisp_parse_state): New member location_byte.
	(scan_sexps_forward): Record from_byte and avoid redundant
	character to byte position calculation ...
	(Fparse_partial_sexp): ... here.  Break too long line.

2013-02-08  Dmitry Antipov  <dmantipov@yandex.ru>

	* lisp.h (make_uninit_vector): New function.
	* alloc.c (Fvector, Fmake_byte_code):
	* ccl.c (Fregister_ccl_program):